# lektur-ai

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md
docs/: ai.md  endpointy.md  rozprawka.md
docs/latex_documentation/: lista_ekranów.tex  main.tex
lekturai_back/: .env.template  .gitignore  README.md  extract_tasks.py  extracted_tasks.json  main.py  pyproject.toml
lekturai_back/app/: db_service.py  exam_schemas.py  main.py  schemas.py
lekturai_back/app/db_utils/: __init__.py  daily_update.py  db_service.py
lekturai_back/app/routers/: auth.py  chat.py  core.py  exercises.py  history.py  schools.py  search.py  stats.py
lekturai_back/app/services/: ai_service.py  sapling_service.py
lekturai_back/scipts/: extract_answers.py  extract_tasks.py
lekturai_back/utils/notification_sender/: notification_sender.py
lekturai_front/: .gitignore  FIREBASE_SETUP.md  NOTIFICATIONS.md  README.md  TROUBLESHOOTING.md  firebase.json  pubspec.yaml
lekturai_front/assets/: .env.example  mock_stats.json  schools.json
lekturai_front/lib/: essay_assistant_screen.dart  firebase_options.dart  history_screen.dart  home_screen.dart  login_screen.dart  main.dart  matura_questions_screen.dart  placeholder_screen.dart  profile_screen.dart  questions_screen.dart  reading_question_screen.dart  register_screen.dart  second_screen.dart  stats_example_screen.dart
lekturai_front/linux/: CMakeLists.txt
lekturai_front/scripts/: generate_splash_background.py
lekturai_front/test/: widget_test.dart
lekturai_front/web/: index.html  manifest.json
(+50 files in other folders)
