[project]
name = "lekturai-back"
version = "0.1.0"
description = "Backend for LekturAI"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pymupdf>=1.26.7",
]

[dependency-groups]
dev = [
    "mypy",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
