[project]
name = "lekturai-back"
version = "0.1.0"
description = "Backend for LekturAI"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "firebase-admin",
    "python-dotenv",
    "google-genai>=1.55.0",
    "python-dotenv>=1.2.1",
    "tenacity>=9.1.2",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "mypy",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
allow-insecure-host = ["pypi.org", "files.pythonhosted.org"]
native-tls = true
